--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Dokdo&family=Gothic+A1:wght@300&family=Hi+Melody&family=Jua&family=Nanum+Pen+Script&family=Nunito+Sans:wght@700&family=Ubuntu&display=swap');
+
 html {
-	font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 body {
-	overflow-x: hidden;
-	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-		"Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-		"Helvetica Neue", sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-		monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
